<resources>
    <string name="app_name">StydyRussian</string>
    <string name="theory">Теория</string>
    <string name="practice">Практика</string>
    <string name="profile">Профиль</string>
    <string name="greetings">Привет! Готовы учить\nрусский язык?</string>
    <string name="greetings1">Для начала создадим вам профиль</string>
    <string name="signUp">Регистрация</string>
    <string name="createNewPass">Придумайте новый пароль</string>
    <string name="confirm">Подтвердить</string>
    <string name="signIn">Вход</string>
    <string name="signedUp">Уже есть аккаунт в Verbum?</string>
    <string name="toSignIn">Войти</string>
    <string name="toSignUp">Зарегистрироваться</string>
    <string name="haveAcc">Уже есть аккаунт?</string>
    <string name="haveNoAcc">Нет аккаунта?</string>
    <string name="passHint">Qwerty123</string>
    <string name="loginHint">BigPluto18564</string>
    <string name="nameHint">Иван</string>
    <string name="surnameHint">Иванов</string>
    <string name="emailHint">BigPluto@somemail.com</string>
    <string name="dateHint">01.01.2000</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="email">Почта</string>
    <string name="date">Дата рождения</string>
    <string name="themes">Темы</string>
    <string name="testProgress">0/10</string>
    <string name="gotIt">Понятно</string>
    <string name="back">Назад</string>
    <string name="test">Тест</string>
    <string name="prac_progress">Прогресс прохождения 0/8</string>
    <string name="theory_progress">Прогресс изучения 0/8</string>
    <string name="personal">Личная информация</string>
    <string name="change_pass">Изменить пароль</string>
    <string name="progress">Прогресс обучения</string>
    <string name="reset">Сбросить прогресс</string>
    <string name="privacy">Политика\nконфиденциальности</string>
    <string name="logOut">Выйти</string>
    <string name="deleteAcc">Удалить аккаунт</string>
    <string name="theme1">н/нн в причастиях</string>
    <string name="theme2">(не)совершенные глаголы</string>
    <string name="theme3">Правила написания не/ни</string>
    <string name="theme4">Спряжения глаголов</string>
    <string name="theme5">Разряды местоимений</string>
    <string name="theme6">Падежи</string>
    <string name="theme7">Косвенная речь</string>
    <string name="theme8">Написание наречий</string>
    <string name="notStudied">Не изучено</string>
    <string name="nilOutOfTen">0/10</string>












    <string name="privacyText">Настоящая политика конфиденциальности применяется к приложению Verbum (далее именуемому «Приложение») для мобильных устройств, созданному компанией 9hamden (далее именуемому «Поставщик услуг») в качестве Бесплатной услуги. Данная услуга предназначена для использования «КАК ЕСТЬ».
Сбор и использование информации
Приложение собирает информацию, когда вы его загружаете и используете. Эта информация может включать в себя такую информацию, как
Адрес интернет-протокола вашего устройства (например, IP-адрес)
Страницы Приложения, которые вы посещаете, время и дата вашего посещения, время, проведенное на этих страницах.
Время, проведенное в приложении
Операционная система, которую вы используете на своем мобильном устройстве.
Приложение не собирает точную информацию о местонахождении вашего мобильного устройства.
Поставщик услуг может использовать предоставленную вами информацию, чтобы время от времени связываться с вами и предоставлять вам важную информацию, необходимые уведомления и маркетинговые акции.
Для удобства использования Приложения Поставщик услуг может потребовать от вас предоставить нам определенную личную информацию, включая, помимо прочего, электронную почту. Информация, которую запросит Поставщик услуг, будет сохранена и использована, как описано в настоящей политике конфиденциальности.
Доступ третьих лиц
Только агрегированные анонимные данные периодически передаются внешним службам, чтобы помочь Поставщику услуг улучшить Приложение и его сервис. Поставщик услуг может передавать вашу информацию третьим лицам способами, описанными в настоящем заявлении о конфиденциальности.
Поставщик услуг может раскрывать предоставленную пользователем и автоматически собираемую информацию:
в соответствии с требованиями закона, например, для выполнения повестки в суд или аналогичного юридического процесса;
когда они добросовестно полагают, что раскрытие информации необходимо для защиты их прав, вашей безопасности или безопасности других, расследования случаев мошенничества или ответа на запрос правительства;
со своими доверенными поставщиками услуг, которые работают от их имени, не имеют независимого использования информации, которую мы им раскрываем, и согласились соблюдать правила, изложенные в настоящем заявлении о конфиденциальности.
Права на отказ
Вы можете легко прекратить сбор информации Приложением, удалив его. Вы можете использовать стандартные процессы удаления, доступные на вашем мобильном устройстве или через магазин мобильных приложений или сеть.
Политика хранения данных
Поставщик услуг будет хранить предоставленные пользователем данные до тех пор, пока вы используете Приложение, а также в течение разумного периода времени после этого. Если вы хотите, чтобы они удалили предоставленные пользователем данные, которые вы предоставили через Приложение, свяжитесь с ними по адресу 9hamden@gmail.com, и они ответят в разумные сроки.
Дети
Поставщик услуг не использует Приложение для сознательного сбора данных или продажи их детям в возрасте до 13 лет.
Поставщик услуг сознательно не собирает личную информацию от детей. Поставщик услуг призывает всех детей никогда не предоставлять какую-либо личную информацию через Приложение и/или Сервисы. Поставщик услуг призывает родителей и законных опекунов контролировать использование Интернета своими детьми и способствовать обеспечению соблюдения настоящей Политики, инструктируя своих детей никогда не предоставлять личную информацию через Приложение и/или Услуги без их разрешения. Если у вас есть основания полагать, что ребенок предоставил личную информацию Поставщику услуг через Приложение и/или Службы, свяжитесь с Поставщиком услуг (9hamden@gmail.com), чтобы он мог предпринять необходимые действия. Вам также должно быть не менее 16 лет, чтобы дать согласие на обработку вашей личной информации в вашей стране (в некоторых странах мы можем разрешить вашему родителю или опекуну делать это от вашего имени).
Безопасность
Поставщик услуг заботится о сохранении конфиденциальности вашей информации. Поставщик услуг обеспечивает физические, электронные и процедурные меры защиты информации, которую Поставщик услуг обрабатывает и хранит.
Изменения
Настоящая Политика конфиденциальности может время от времени обновляться по любой причине. Поставщик услуг уведомит вас о любых изменениях в Политике конфиденциальности, обновив эту страницу новой Политикой конфиденциальности. Вам рекомендуется регулярно проверять настоящую Политику конфиденциальности на предмет любых изменений, поскольку дальнейшее использование считается одобрением всех изменений.
Данная политика конфиденциальности действительна с 20 февраля 2024 г.
Ваше согласие
Используя Приложение, вы соглашаетесь на обработку вашей информации, как это изложено в настоящей Политике конфиденциальности сейчас и с внесенными нами поправками.
Связаться с нами
Если у вас есть какие-либо вопросы относительно конфиденциальности при использовании Приложения или вопросы о применяемых методах, свяжитесь с Поставщиком услуг по электронной почте 9hamden@gmail.com.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>