<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_bg"
    android:orientation="vertical"
    tools:context=".GreetingsSigning.SignUp">


    <ImageButton
        android:id="@+id/backButton"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_bg"
        android:src="@drawable/back"
        />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/signIn"
        android:fontFamily="@font/montserratbold"
        android:textSize="32sp"
        android:layout_marginTop="100dp"
        android:textColor="@color/white"
        />


    <EditText
        android:layout_marginTop="50dp"
        android:id="@+id/loginEditText"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:hint="@string/loginHint"
        android:paddingEnd="15dp"
        android:fontFamily="@font/montserratsemibold"
        android:paddingStart="20dp"
        android:drawablePadding="30dp"
        android:drawableStart="@drawable/profile"
        android:textColorHint="@color/ef_font"
        android:background="@drawable/rounded_edit_text"
        android:textColor="@color/ef_font"
        android:inputType="textPersonName"
        />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/passEditText"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:hint="@string/passHint"
        android:paddingEnd="15dp"
        android:fontFamily="@font/montserratsemibold"
        android:paddingStart="20dp"
        android:drawablePadding="30dp"
        android:drawableStart="@drawable/lock"
        android:textColorHint="@color/ef_font"
        android:background="@drawable/rounded_edit_text"
        android:textColor="@color/ef_font"
        android:inputType="textPassword"
        />


    <Button
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:fontFamily="@font/montserratbold"
        android:backgroundTint="@color/green"
        android:textColor="@color/purple_bg"
        android:text="@string/toSignIn"
        />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/haveNoAcc"
        android:fontFamily="@font/montserratbold"
        android:textSize="12sp"
        android:layout_marginTop="3dp"

        android:textColor="@color/ef_font"
        />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/toSignUp"
        android:fontFamily="@font/montserratbold"
        android:textSize="12sp"
        android:layout_marginStart="4sp"
        android:textColor="@color/green"
        />

</LinearLayout>