<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_bg"
    tools:context=".Change_password">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_bg"
        android:src="@drawable/back"
        />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/createNewPass"
        android:fontFamily="@font/montserratbold"
        android:textSize="28sp"
        android:layout_marginTop="55dp"
        android:textColor="@color/white"
        />

    <EditText
        android:layout_marginTop="60dp"
        android:id="@+id/passEditText"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:hint="@string/passHint"
        android:fontFamily="@font/montserratsemibold"
        android:paddingStart="20dp"
        android:drawablePadding="30dp"
        android:drawableStart="@drawable/lock"
        android:textColorHint="@color/ef_font"
        android:background="@drawable/rounded_edit_text"
        android:textColor="@color/ef_font"
        android:inputType="textPassword"
        />

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/passEditText1"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:hint="@string/passHint"
        android:fontFamily="@font/montserratsemibold"
        android:paddingStart="20dp"
        android:drawablePadding="30dp"
        android:drawableStart="@drawable/lock"
        android:textColorHint="@color/ef_font"
        android:background="@drawable/rounded_edit_text"
        android:textColor="@color/ef_font"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="320dp"
        android:layout_height="55dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:fontFamily="@font/montserratbold"
        android:backgroundTint="@color/green"
        android:textColor="@color/purple_bg"
        android:text="@string/confirm"
        />

</LinearLayout>